<resources>
    <string name="app_name">Clash of battle</string>
    <string name="action_settings">Settings</string>

    <string name="navbar_menu_list_of_players">Liste des joueurs</string>
    <string name="navbar_menu_update_player">Modifier le joueur</string>
    <string name="navbar_menu_select_capability">Sélection d\'une capacité</string>
    <string name="navbar_menu_fight">Baston !</string>

    <string name="select_capability_title">Sélectionnez une aptitude</string>

    <string name="capability_risky_attack_description">Multiplie par deux les dégâts d\'une attaque (1D6 * 2)</string>
    <string name="capability_double_attack_description">Fait une attaque normale deux fois (1D6 + 1D6)</string>
    <string name="capability_precise_attack_description">Fait une attaque normale + 3 dégâts (1D6 + 3)</string>
    <string name="capability_risky_parry_description">Fait une attaque (1D6) et annule 1D6 * 2 dégâts adverse</string>
    <string name="capability_double_parry_description">Fait une attaque (1D6) et annule 1D6 + 1D6 dégâts adverse</string>
    <string name="capability_precise_parry_description">Fait une attaque (1D6) et annule 1D6 + 3 dégâts adverse</string>
    <string name="capability_risky_heal_description">Soigne 1D6 * 2 PV</string>
    <string name="capability_double_heal_description">Soigne 1D6 + 1D6 PV</string>
    <string name="capability_precise_heal_description">Soigne 1D6 + 3 PV</string>

    <string name="capability_risky_attack_name">Attaque risqué</string>
    <string name="capability_double_attack_name">Double attaque</string>
    <string name="capability_precise_attack_name">Attaque précise</string>
    <string name="capability_risky_parry_name">Parade risqué</string>
    <string name="capability_double_parry_name">Double parade</string>
    <string name="capability_precise_parry_name">Parade précise</string>
    <string name="capability_risky_heal_name">Soin risqué</string>
    <string name="capability_double_heal_name">Double soin</string>
    <string name="capability_precise_heal_name">Soin précis</string>


    <string name="capability_first">Compétence 1</string>
    <string name="capability_second">Compétence 2</string>
    <string name="capability_third">Compétence 3</string>

    <string name="job_warrior_name">Guerrier</string>
    <string name="job_knight_name">Chevalier</string>
    <string name="job_priest_name">Prêtre</string>
    <string name="job_bard_name">Barde</string>

    <string name="fight_simple_attack_button_name">Attaque simple</string>
    <string name="fight_risky_parade_button_name">Parade risquée</string>
    <string name="fight_double_parade_button_name">Double parade</string>
    <string name="fight_precise_parade_button_name">Parade précise</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_class_label"><i>Classe : </i></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>