<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player_fight.PlayerFightFragment">

    <include
        android:id="@+id/player_one"
        layout="@layout/fight_first_player"/>

    <include
        android:id="@+id/player_two"
        layout="@layout/fight_second_player" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="Infos de combat"
        app:layout_constraintTop_toBottomOf="@+id/player_two"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-41dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/fight_button_simple_attack"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fight_button_simple_attack"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:text="@string/fight_simple_attack_button_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fight_button_risky_parade"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/fight_risky_parade_button_name"
            app:layout_constraintBottom_toTopOf="@+id/fight_button_double_parade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/fight_button_double_parade"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/fight_double_parade_button_name"
            app:layout_constraintBottom_toTopOf="@+id/fight_button_precise_parade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fight_button_precise_parade"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/fight_precise_parade_button_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>